<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/textViewQuote1"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="72dp"
        android:layout_weight="1"
        android:fontFamily="@font/nunito_extralight"
        android:text="@string/quote1"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textViewQuote2"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:layout_weight="1"
        android:fontFamily="@font/nunito_extralight"
        android:text="@string/quote2"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textViewQuote3"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:layout_weight="1"
        android:fontFamily="@font/nunito_extralight"
        android:text="@string/quote3"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textViewQuote4"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:layout_weight="1"
        android:fontFamily="@font/nunito_extralight"
        android:text="@string/quote4"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnIdontKnow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="@color/gray"
        android:onClick="iDontKnowButton"
        android:text="@string/IdontKnow"
        tools:ignore="TextContrastCheck" />

    <AutoCompleteTextView
        android:id="@+id/autoCompleteMovieName"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:completionThreshold="2"
        android:hint="What is the movie?"
        />

</LinearLayout>